--- a/src/main/resources/templates/Setting.html
+++ b/src/main/resources/templates/Setting.html
@@ -60,6 +60,5 @@
 </section>
 
 </body>
-<script th:src="@{/js/registration.js}"></script>
-
+<script th:src="@{/js/basic-tools.js}"></script>
 </html>
