--- a/src/main/resources/templates/admin/AdminAllUsers.html
+++ b/src/main/resources/templates/admin/AdminAllUsers.html
@@ -35,7 +35,7 @@
             <div class="admin__panel">
                 <div class="admin__panel-users">
                     <ul>
-                        <li th:each="user : ${users}">j
+                        <li th:each="user : ${users}">
                             <div class="user-top">
                                 <div class="user-top-left">
                                     <img class="user_avatar" th:src="@{'/uploads/' + ${user.avatar}}" alt="ava-users" onerror="this.src = '/images/admin/admin-ava.svg';">
@@ -82,7 +82,6 @@
 </div>
 
 </body>
-<script th:src="@{/js/registration.js}"></script>
 <script th:src="@{/js/alert.js}"></script>
 
 </html>
