--- a/src/main/resources/static/css/details-track.css
+++ b/src/main/resources/static/css/details-track.css
@@ -4,7 +4,8 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    transition: bottom 0.6s ease-in-out;
+    transition: all 0.6s ease !important;
+    /*transition: bottom 0.6s ease-in-out;*/
     z-index: 200;
     background-position: center !important;
     background-size: cover !important;
@@ -19,7 +20,7 @@
     backdrop-filter: blur(7.5px);
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Здесь 0.5 - это прозрачность, вы можете изменить ее по своему усмотрению */
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .details-track.open {
@@ -35,10 +36,11 @@
 }
 
 .details-track__img {
-    border-radius: 10px;
+    display: block;
     object-fit: cover;
     object-position: center;
     background-repeat: no-repeat;
+    border-radius: 10px;
 }
 
 .details-track__top {
@@ -48,12 +50,10 @@
 }
 
 .details-track__btn {
-    font-family: 'Nunito';
-
+    font-family: 'Nunito', serif;
     font-weight: 400;
     font-size: 21px;
     position: relative;
-    font-size: 20px;
     line-height: 1;
     transition: color .3s, opacity .3s;
     padding: 0 0 6px;
@@ -76,11 +76,11 @@
 }
 
 .details-track__tabs {
-    max-width: 700px;
+    max-width: 800px;
     width: 100%;
 }
 
-.details-track__artist {
+.details-track__title {
     color: var(--white);
     font-size: 64px;
     font-weight: 500;
@@ -88,7 +88,7 @@
     margin-top: 80px;
 }
 
-.details-track__title {
+.details-track__artist {
     margin-top: 20px;
     color: var(--white);
     font-size: 32px;
@@ -105,11 +105,10 @@
 
 }
 
-
 .details-track__lyrics {
     text-wrap: balance;
     color: var(--white);
-    font-size: 48px;
+    font-size: 38px;
     font-style: normal;
     font-weight: 500;
     line-height: 140%;
@@ -117,11 +116,16 @@
 
 .details-track__content {
     max-height: 600px;
-    overflow-y: scroll;
+
+}
+
+.track__tab-lyric {
+    max-height: 600px;
+    overflow-y: auto;
+    mask-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0));
 }
 
 .details-track__tab {
-    padding: 5px 20px;
     position: relative;
     display: none;
 }
@@ -130,14 +134,14 @@
     display: block;
 }
 
-.details-track__tab::before {
-    position: absolute;
-    content: "";
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background-color: var(--feolet);
-}
+/*.track__tab-lyric::before {*/
+/*    position: absolute;*/
+/*    content: "";*/
+/*    left: 0;*/
+/*    width: 2px;*/
+/*    height: 100%;*/
+/*    background-color: var(--feolet);*/
+/*}*/
 
 .details-track__video {
     position: relative;
@@ -153,13 +157,6 @@
     height: 100%;
 }
 
-.details-track__img {
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-    background-repeat: no-repeat;
-}
-
 .details-track__play {
     position: absolute;
     z-index: 100;
@@ -168,13 +165,8 @@
     transform: translateX(-50%);
 }
 
-
 .details-track__inner {
     position: relative;
-}
-
-.details-track__img {
-    display: block;
 }
 
 .details-track__inner::before {
@@ -197,4 +189,26 @@
 .details-track__inner::before.loaded {
     opacity: 1;
     transition: background-color 0.5s ease;
+}
+
+.warn__notification {
+    pointer-events: none;
+    opacity: 0;
+    z-index: 201;
+    position: fixed;
+    bottom: 110px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 11px 28px;
+    border-radius: 50px;
+    background: rgba(248, 248, 248, 0.09);
+    backdrop-filter: blur(14px);
+    transition: all .5s ease-in-out;
+}
+
+.warn__notification p {
+    color: #FFF;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: normal;
 }
