--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -65,7 +65,6 @@ audio {
     border-radius: 50px;
 }
 
-
 .circle {
     content: "";
     background: url(../images/logo-progress-var-line.svg);
@@ -75,9 +74,10 @@ audio {
     left: 0;
     width: 10px;
     height: 15px;
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.2s ease;
 }
+
 .total-time,
 .current-time {
     color: var(--white);
@@ -85,6 +85,7 @@ audio {
     font-size: 12px;
     font-weight: 600;
 }
+
 .progress-bar:hover .circle {
     opacity: 1;
 }
@@ -358,7 +359,7 @@ body.slide-out {
 }
 
 .custom-select__current {
-    font-size: 16px;
+    font-size: 15px;
     position: relative;
     cursor: pointer;
     padding-right: 50px;
@@ -419,6 +420,7 @@ body.slide-out {
 
 .custom-select__item:not(:last-child) {
     border-bottom: 1px solid #8478ff;
+    border-radius: 0;
 }
 
 /* alert */
@@ -488,4 +490,201 @@ body.slide-out {
     border-radius: 438px;
     filter: blur(240px);
     z-index: -18;
+}
+
+.control-panel {
+    margin-bottom: 40px;
+}
+
+.control-panel-name {
+    background: linear-gradient(49deg, #4A3AF2 9.53%, #CD3FFF 44.96%, #DA138A 105.45%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.control-panel__wrapper {
+    display: flex;
+    margin-top: 40px;
+    align-items: center;
+    gap: 21px;
+}
+
+.control-block {
+    border-radius: 20px;
+    padding: 15px;
+    background: linear-gradient(90deg, #3F3E41 0%, #333 100%);
+    width: 405px;
+}
+
+.control-block-randBtn-img {
+    width: 45px;
+}
+
+.control-block-randTrack {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+}
+
+.control-block-randTrack h2 {
+    color: var(--white);
+    font-size: 24px;
+    font-weight: 500;
+    line-height: normal;
+    max-width: 232px;
+}
+
+
+.control-block-volume {
+    padding: 32px 15px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.control-block-device {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 18px;
+    line-height: normal;
+    padding: 31px 34px;
+}
+
+.control-block-device h6 {
+    color: var(--white);
+    font-weight: 700;
+}
+
+.control-block-device {
+    color: var(--gray);
+    font-weight: 600;
+}
+
+.control-block-genre {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.block-genre {
+    position: relative;
+    border-radius: 20px;
+    padding: 15px;
+    width: 180px;
+    height: 88px;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.block-genre span {
+    color: var(--black);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.block-genre img {
+    position: absolute;
+    bottom: -7px;
+    right: -10px;
+    width: 45px;
+}
+
+/*range*/
+
+.slider-container {
+    position: relative;
+    width: 100%;
+}
+
+#volumeControl {
+    width: 100%;
+    margin: 0;
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 4px;
+    width: 265px;
+    background: #666;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+input[type=range]:focus {
+    border: unset;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    background: #ecf0f1;
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+    border-radius: 50%;
+    -webkit-appearance: none;
+}
+
+
+.interesting-artist {
+    margin-top: 85px;
+}
+
+.artists__wrapper {
+    display: grid;
+    margin-top: 140px;
+    align-items: center;
+    gap: 40px;
+    grid-template-columns: repeat(6, 1fr);
+}
+
+.artist__block {
+    position: relative;
+    width: 245px;
+    height: 245px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-radius: 20px;
+    text-align: center;
+    background: #1A1A1A;
+}
+
+.artist-avatar {
+    position: absolute;
+    top: -75px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.interesting-artist-name {
+    margin-top: 105px;
+
+    color: var(--white);
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.interesting-artist-genre {
+
+}
+
+.interesting-artist-link {
+    margin: 0 auto;
+    width: fit-content;
 }
