--- a/src/main/resources/static/css/tracks-main.css
+++ b/src/main/resources/static/css/tracks-main.css
@@ -1,6 +1,6 @@
-.tracks-main {
-    margin-bottom: 200px;
-}
+/*.tracks-main {*/
+/*    margin-bottom: 200px;*/
+/*}*/
 
 .tracks-main__list {
     display: grid;
@@ -10,7 +10,7 @@
 }
 
 .tracks-main__item:hover .tracks-main__btn {
-    opacity: 1;
+    opacity: 1 !important;
     pointer-events: auto;
 }
 
@@ -41,7 +41,7 @@
 
 .tracks-main__name,
 .tracks-main__album {
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .tracks-main__name {
@@ -65,7 +65,6 @@
     padding: 0;
     transition: opacity .4s;
 }
-
 .tracks-main__btn img {
     height: 100%;
     width: 100%;
